# UVCCamera

./: CMakeLists.txt
src/: localdefines.h  utilbase.h
src/UVCCamera/: CMakeLists.txt  Parameters.cpp  Parameters.h  UVCButtonCallback.cpp  UVCButtonCallback.h  UVCCamera.cpp  UVCCamera.h  UVCPreview.cpp  UVCPreview.h  UVCStatusCallback.cpp  UVCStatusCallback.h  libUVCCamera.h  objectarray.h  serenegiant_usb_UVCCamera.cpp
src/UVCCamera/pipeline/: CallbackPipeline.cpp  CallbackPipeline.h  ConvertPipeline.cpp  DistributePipeline.cpp  PreviewPipeline.cpp  PreviewPipeline.h  PublisherPipeline.cpp  SQLiteBufferedPipeline.cpp  SimpleBufferedPipeline.cpp  pipeline_helper.cpp  pipeline_helper.h
